Kubernetes/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  #- host: localhost
  - host: flaudlite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-clusterip-srv
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-clusterip-srv
            port:
              number: 8000
